# parinvoke

./: .copier-answers.yml  .header.yaml  pyproject.toml
.github/workflows/: check-sources.yml  package.yml  test.yml
docs/: conf.py
envs/: parinvoke-py3.10-ci.yaml  parinvoke-py3.10-dev.yaml  parinvoke-py3.10-doc.yaml  parinvoke-py3.10-test.yaml  parinvoke-py3.11-dev.yaml  parinvoke-py3.11-doc.yaml  parinvoke-py3.11-test.yaml  parinvoke-py3.12-ci.yaml  parinvoke-py3.12-dev.yaml  parinvoke-py3.12-doc.yaml
parinvoke/: __init__.py  _context.py  _worker.py  config.py  context.py  isolate.py  logging.py  parallel.py  util.py
parinvoke/invoker/: __init__.py  inproc.py  pool.py
parinvoke/persist/: __init__.py  binpickle.py  shm.py
parinvoke/sharing/: __init__.py  _sharedpickle.py  binpickle.py  shm.py
tests/: test_config.py  test_isolate.py  test_parallel.py  test_persist.py  test_sharing.py
